--- a/fb-clone-frontend/package.json
+++ b/fb-clone-frontend/package.json
@@ -2,7 +2,7 @@
 	"name": "fb-mern-frontend",
 	"version": "0.1.0",
 	"private": true,
-	"proxy":"http://localhost:9000",
+	"proxy": "http://localhost:9000",
 	"dependencies": {
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
@@ -13,6 +13,7 @@
 		"firebase": "^7.21.1",
 		"form-data": "^3.0.0",
 		"javascript-time-ago": "^2.0.13",
+		"materialize-css": "^1.0.0-rc.2",
 		"pusher-js": "^7.0.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
